Add sectioned API v1 settings
